@@ -1,3 +1,10 @@
+2004-09-23  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* java/awt/RenderingHints.java: Documented.
+	(RenderingHints): Accept null init Map.
+	(putAll): Preprocess map to generate appropriate exceptions.
+	(remove): Cast object to Key and remove from hintMap.
+
 2004-09-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/awt/MenuComponent.java, java/awt/MenuBar.java:
